First commit v3 - primeiro pipeline

--- a/.github/workflows/mdc-workflow.yaml
+++ b/.github/workflows/mdc-workflow.yaml
@@ -25,7 +25,7 @@ jobs:
     needs: build # O estágio de qualidade depende de estágio de build
     runs-on: ubuntu-latest
 
-    stpes:
+    steps:
       - name: Fase de Qualidade
         run: echo "Executando Deploy de QA"
   
