--- a/.github/workflows/mdc-workflow.yaml
+++ b/.github/workflows/mdc-workflow.yaml
@@ -1,9 +1,10 @@
 name: MDC Workflow
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch
+  # push:
+  #   branches:
+  #     - main
 
 jobs:
   build:
