--- a/.github/workflows/mdc-workflow-lab3.yaml
+++ b/.github/workflows/mdc-workflow-lab3.yaml
@@ -10,7 +10,7 @@ jobs:
   docker_build_push_acr:
     name: "Docker Build and Push to ACR"
     runs-on: ubuntu-latest
-    enviroment: production
+    environment: production
 
     defaults:
       run:
