--- a/.github/workflows/mdc-workflow-lab5.yaml
+++ b/.github/workflows/mdc-workflow-lab5.yaml
@@ -1,10 +1,10 @@
-name: docker_build_push_acr
+name: Build and Deploy K8s App
 
 on:
-  workflow_dispatch
-  # push:
-  #   branches:
-  #     - main
+  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   docker_build_push_acr:
@@ -27,9 +27,29 @@ jobs:
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
       
-      - name: 🐳 Docker build
+      - name: 🐳 Docker build / push
         uses: docker/build-push-action@v4
         with:
           context: ./app
           push: true
           tags: ${{ secrets.REGISTRY_LOGIN_SERVER }}/mdc-app:latest
+    
+  deploy_on_AKS:
+    name: "Deploy App on AKS"
+    runs-on: ubuntu-latest
+    needs: docker_build_push_acr
+
+    steps:
+      - name: "📥 Checkout code"
+        uses: actions/checkout@v2
+      
+      - name: "🔐 Azure Login"
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      
+      - name: "🔑 Get AKS Credentials"
+        run: az aks get-credentials --resource-group mdc-rg --name mdc-aks --overwrite-existing
+
+      - name: "🚀 Deploy to AKS"
+        run: kubectl apply -f kube-manifest/deployment.yaml
