--- a/.github/workflows/mdc-workflow-lab5.yaml
+++ b/.github/workflows/mdc-workflow-lab5.yaml
@@ -1,10 +1,10 @@
 name: Build and Deploy K8s App
 
 on:
-  workflow_dispatch:
-  push:
-    branches:
-      - main
+  workflow_dispatch
+  # push:
+  #   branches:
+  #     - main
 
 jobs:
   docker_build_push_acr:
