--- a/.github/workflows/mdc-workflow-lab6.yaml
+++ b/.github/workflows/mdc-workflow-lab6.yaml
@@ -46,7 +46,7 @@ jobs:
         continue-on-error: true
       
       - name: Terraform Plan Status
-        if: steps.plan.outcome == "failure"
+        if: steps.plan.outcome == 'failure'
         run: exit 1
   
   Deploy_Terraform:
