Lab-06: Create a Instance on AWS v3: mdc-workflow-lab6.yaml

--- a/.github/workflows/mdc-workflow-lab6.yaml
+++ b/.github/workflows/mdc-workflow-lab6.yaml
@@ -71,7 +71,7 @@ jobs:
     needs: [Deploy_Terraform]
     runs-on: ubuntu-latest
 
-    if: github.event.inputs.destroyInfra == "true"
+    if: github.event.inputs.destroyInfra == 'true'
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
