--- a/.github/workflows/02-develop-to-homol.yaml
+++ b/.github/workflows/02-develop-to-homol.yaml
@@ -20,7 +20,7 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: '🔑 Get AKS Credentials'
-        run: az aks get-credentials --resource-group mdc-rgd --name mdc-aks --overwrite-existing
+        run: az aks get-credentials --resource-group mdc-rg --name mdc-aks --overwrite-existing
 
       - name: '🛳 Deploy to AKS'
         run: kubectl apply -f kube-manifest/hml/deployment.yaml
@@ -30,14 +30,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v2
-      
+
       - name: Create Pull Request
         uses: repo-sync/pull-request@v2
         with:
           github_token: ${{ secrets.TOKEN_GB }}
-          destination_branch: "main"  # Merge into this branch
+          destination_branch: "master"  # Merge into this branch
           pr_title: "Automated PR from ${{ github.ref }}"
           pr_body: "## 🚀 Changes Introduced\n\nDescrição das principais mudanças que este PR traz.\n\n## 🖼️ Screenshots\n\n## ⚙️ Testes\n\n## 📦 Dependências\n\n##  Miscelânea \n\n## ☑️ Checklist\n\n- [ ] Código testado\n- [ ] Documentação atualizada\n- [ ] Reviewers alocados\n\n## 🎉 Como testar"
           pr_draft: false
